Se agrego el boton regresar y se puso la barra deslizadora en el registro del paciente.

--- a/Registro-Paciente.html
+++ b/Registro-Paciente.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 	<div class="modal">
+		<a href="Lobby-Paciente.html">
+			<button class="checkout" type="button" style="cursor: pointer;" id="regresarButton">Regresar</button>
+		</a>		
 		<form class="form">
 
 			<div class="nameP">
