--- a/Lobby-Paciente.html
+++ b/Lobby-Paciente.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CMO</title>
+    <title>Clinica virtual</title>
     <link rel="stylesheet" href="Estilo-L-P.css">
 </head>
 <body>
@@ -52,15 +52,16 @@
         <path d="M13.73 21a2 2 0 0 1-3.46 0" /></svg>
         </button>
 
-        <button class="profile-btn">
+        <a href="MiPerfil1.html" class="profile-btn">
             <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" 
             class="bi bi-person-circle" viewBox="0 0 19 19">
                 <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                 <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 
                 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-              </svg>
-        <span>MI PERFIL</span>
-        </button>
+            </svg>
+            <span>MI PERFIL</span>
+        </a>
+
 
         </div>
         <button class="messages-btn">
