cambio de doctor a paciete en perfil

--- a/MiPerfil1.html
+++ b/MiPerfil1.html
@@ -8,44 +8,33 @@
 </head>
 <body>
     <header>
-        <div class="doctor-info">
-            <img src="Fotos\descarga.jpg" alt="Foto del Dr. Juan Pérez">
-            <div>
-                <h1>Bienvenido Dr. Juan Pérez</h1>
-                <h2>Médico Especialista en Cardiología</h2>
-                <h3>Perfil profesional</h3>
-                <button onclick="editarPerfil()">Editar Perfil</button>
-                <button onclick="redirigirConsultas()">Administrar consultas</button>
-            </div>
+        <img src="Fotos\doctores\descarga (1).jpg" alt="Foto del Dr. Juan Pérez">
+        <div>
+            <h1>Bienvenido Sr. Juan Pérez</h1>
+            <h3>Perfil de paciente</h3>
+            <button onclick="editarPerfil()">Editar Perfil</button>
+            <button onclick="redirigirConsultas()">Administrar consultas</button>
         </div>
     </header>
     
     <nav>
         <ul>
             <li><a href="#perfil">Perfil</a></li>
-            <li><a href="#educacion">Educación</a></li>
-            <li><a href="#experiencia">Experiencia</a></li>
+            <li><a href="#MiHistorial">Mi historial</a></li>
             <li><a href="#contacto">Contacto</a></li>
-            
         </ul>
     </nav>
     <main>
         <section id="perfil">
             <h2>Perfil</h2>
-            <p>El Dr. Juan Pérez es un médico especialista en cardiología con más de 10 años de experiencia en el diagnóstico y tratamiento de enfermedades cardíacas.</p>
+            <p>62 años</p>
+            <p>El Sr. Juan Perez tiene cáncer</p>
         </section>
-        <section id="educacion">
-            <h2>Educación</h2>
+        <section id="MiHistorial">
+            <h2>Mi historial</h2>
             <ul>
-                <li>MD, Universidad Nacional Autónoma de México</li>
-                <li>Residencia en Cardiología, Hospital General de México</li>
-            </ul>
-        </section>
-        <section id="experiencia">
-            <h2>Experiencia</h2>
-            <ul>
-                <li>Cardiólogo en Hospital ABC, Ciudad de México (2010 - Presente)</li>
-                <li>Cardiólogo Consultor en Hospital Juárez, Ciudad de México (2008 - 2010)</li>
+                <li>3 consultas de especialidad</li>
+                <li>1 tratamiento en curso</li>
             </ul>
         </section>
         <section id="contacto">
@@ -71,4 +60,5 @@
     </script>
 </body>
 </html>
+
 
