se corrigio el perfil, se agregan colores al loby y se agrega un calendario provisional

--- a/Lobby-Paciente.html
+++ b/Lobby-Paciente.html
@@ -13,7 +13,7 @@
         <div class="app-header">
         <div class="app-header-left">
         <span class="app-icon"></span>
-        <p class="app-name">TABLERO</p>
+        <p class="app-name">Clinica virtual</p>
         <div class="search-wrapper">
         <input class="search-input" type="text" placeholder="Buscar">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" 
@@ -86,7 +86,7 @@
         </a>
 
 
-        <a href="" class="app-sidebar-link">
+        <a href="Calendario.html" class="app-sidebar-link">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" 
         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" 
         class="feather feather-calendar">
@@ -123,17 +123,17 @@
         <div class="projects-section-line">
         <div class="projects-status">
         <div class="item-status">
-        <span class="status-number">45</span>
-        <span class="status-type">In Progress</span>
+        <span class="status-number">2</span>
+        <span class="status-type">Consultas pendientes</span>
         </div>
 
         <div class="item-status">
-        <span class="status-number">24</span>
-        <span class="status-type">Upcoming</span>
+        <span class="status-number">1</span>
+        <span class="status-type">Tratamiento activo</span>
         </div>
         <div class="item-status">
-        <span class="status-number">62</span>
-        <span class="status-type">Total Projects</span>
+        <span class="status-number">6</span>
+        <span class="status-type">Veces consultado</span>
         </div>
         </div>
 
@@ -167,7 +167,7 @@
         
         <div class="project-boxes jsGridView">
         <div class="project-box-wrapper">
-        <div class="project-box" style="background-color: #fee4cb;">
+        <div class="project-box" style="background-color: #aaeb9e;">
         <div class="project-box-header">
         <div class="more-wrapper">
         <button class="project-btn-more">
@@ -181,21 +181,21 @@
         </div>
         </div>
         <div class="project-box-content-header">
-        <p class="box-content-header">Mi Diagnóstico</p>
-        <p class="box-content-subheader">Doctor: </p>
+        <p class="box-content-header">Mi Diagnóstico: Cancer</p>
+        <p class="box-content-subheader">Doctor: Jose Torres</p>
         </div>
         <div class="box-progress-wrapper">
-        <p class="box-progress-header">Progreso</p>
+        <p class="box-progress-header">Avance de tratamiento</p>
         <div class="box-progress-bar">
-        <span class="box-progress" style="width: 60%; background-color: #ff942e"></span>
+        <span class="box-progress" style="width: 60%; background-color: #3264cf"></span>
         </div>
         <p class="box-progress-percentage">60%</p>
         </div>
         <div class="project-box-footer">
         <div class="participants">
         </div>
-        <div class="days-left" style="color: #ff942e;">
-        2 Días Restantes
+        <div class="days-left" style="color: #155c0e;">
+        6 Días Restantes
         </div>
         </div>
         </div>
