Cambios en la base de Datos para registrar usuarios

--- a/Inicio-Registro-Usuiaro.html
+++ b/Inicio-Registro-Usuiaro.html
@@ -13,7 +13,7 @@
 
     <div class="container" id="container">
         <div class="form-container sign-up">
-            <form id="registerForm">
+            <form id="registerForm" method="post">
                 <h1>Crear Cuenta</h1>
                 <div class="social-icons">
                     <a href="https://www.instagram.com/_mshkp_/" class="icon" target="_blank">
