--- a/Inicio-Registro-Usuiaro.html
+++ b/Inicio-Registro-Usuiaro.html
@@ -12,6 +12,7 @@
 <body>
 
     <div class="container" id="container">
+        <!-- Formulario de Registro -->
         <div class="form-container sign-up">
             <form id="registerForm" method="post">
                 <h1>Crear Cuenta</h1>
@@ -22,12 +23,13 @@
                 <input type="text" id="name" placeholder="Nombre">
                 <input type="email" id="email" placeholder="Correo Electrónico">
                 <input type="password" id="password" placeholder="Contraseña">
-                
                 <button id="registerButton">Registrar Cuenta Nueva</button>
                 <p id="successMessage" class="hidden">¡Cuenta registrada exitosamente!</p>
                 <p id="errorMessage" class="hidden"> *Todos los campos son obligatorios* </p>
             </form>
         </div>
+
+        <!-- Formulario de Inicio de Sesión -->
         <div class="form-container sign-in">
             <form id="loginForm">
                 <h1>Iniciar Sesión</h1>
@@ -38,22 +40,23 @@
                 <input type="email" id="loginEmail" placeholder="Correo">
                 <input type="password" id="loginPassword" placeholder="Contraseña">
                 <a href="OlvidasteContrasena.html">¿Olvidaste tu Contraseña?</a>
-                <a href="Lobby-Paciente.html">
-                    <button type="button" id="loginButton">Iniciar</button>
-                </a>
+                <!-- Elimina el <a> y deja solo el botón -->
+                <button type="submit" id="login1">Iniciar</button>
             </form>
         </div>
+
+        <!-- Panel de cambio entre formularios -->
         <div class="toggle-container">
             <div class="toggle">
                 <div class="toggle-panel toggle-left">
                     <h1>¡Bienvenido!</h1>
-                    <p>Registrese con sus datos.</p>
+                    <p>Registre sus datos.</p>
                     <button id="login">Iniciar Sesión</button>
                 </div>
 
                 <div class="toggle-panel toggle-right">
-                    <h1>¡Bienvenido de vuelta!</h1>
-                    <p>Ingrese su Usuario y Contraseña.</p>
+                    <h1>¿Nuevo Usuario?</h1>
+                    <br>
                     <button id="register">Crear Cuenta</button>
                 </div>
             </div>
@@ -62,4 +65,5 @@
 
     <script src="I-R-U.js"></script>
 </body>
+
 </html>
