--- a/Inicio-Registro-Usuiaro.html
+++ b/Inicio-Registro-Usuiaro.html
@@ -39,9 +39,10 @@
                 </div>
                 <input type="email" id="loginEmail" placeholder="Correo">
                 <input type="password" id="loginPassword" placeholder="Contraseña">
-                <a href="OlvidasteContrasena.html">¿Olvidaste tu Contraseña?</a>
-                <!-- Elimina el <a> y deja solo el botón -->
-                <button type="submit" id="login1">Iniciar</button>
+                <a href="3-OlvidasteContrasena.html">¿Olvidaste tu Contraseña?</a>
+                <a href="2-LobbyPaciente.html">
+                    <button type="button" id="loginButton">Iniciar</button>
+                </a>
             </form>
         </div>
 
