Se impleneta el formulario para el Doctor, ya se puede registrar y usar su cedula para iniciar sesión

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <h1>¿Nuevo Usuario?</h1>
                     <br>
                     <button id="goToRegister">Crear Cuenta</button>
+                    <a href="indexDoc.html" class="registro-link">¿Eres doctor? Da click Aquí para Registrarte</a>
                 </div>
             </div>
         </div>
