Se arregla el botón de Iniciar/Crear cuenta de la animación

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                 <div class="toggle-panel toggle-left">
                     <h1>¡Bienvenido!</h1>
                     <p>Registre sus datos.</p>
-                    <button id="goToLogin">Iniciar Sesión</button>
+                    <button id="login">Iniciar Sesión</button>
                 </div>
 
                 <div class="toggle-panel toggle-right">
                     <h1>¿Nuevo Usuario?</h1>
                     <br>
-                    <button id="goToRegister">Crear Cuenta</button>
+                    <button id="register">Crear Cuenta</button>
                     <a href="indexDoc.html" class="registro-link">¿Eres doctor? Da click Aquí para Registrarte</a>
                 </div>
             </div>
