Se agrega etiqueta para "¿Olvidaste tu contraseña?"

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
                 </div>
                 <input type="email" id="loginEmail" placeholder="Correo">
                 <input type="password" id="loginPassword" placeholder="Contraseña">
-                
+                <a href="3-OlvidasteContrasena.html" class="registro-link">¿Olvidaste tu Contraseña?</a>
                 <button type="submit" id="loginButton">Iniciar</button>
+                <br>
             </form>
         </div>
 
