--- a/4-PefilPaciente.html
+++ b/4-PefilPaciente.html
@@ -73,9 +73,8 @@
     </footer>
     <script>
         function editarPerfil() {
-            // Aquí puedes agregar el código JavaScript para la función de editar perfil
-            alert("Agrega la fokin funcion para editar");
-        }
+        window.location.href = "5-EditarPerfil.html";
+    }
 
         function redirigirConsultas() {
             // Aquí puedes agregar el código JavaScript para redirigir a la página de administrar consultas
