Se agrega una página para ofrecer el servicio, los botones para registrar doctores ya funcionan y queda pendiente la barra de progreso de las consultas del paciente

--- a/Lobby-Paciente.html
+++ b/Lobby-Paciente.html
@@ -188,7 +188,14 @@
         </div>
         </div>
         <div class="project-box-content-header">
-        <p class="box-content-header">Mi Diagnóstico</p>
+            <div class="diagnostico-container">
+                <h3>Mi Diagnóstico</h3>
+                <p id="diagnostico-texto">Cargando...</p>
+                <p><strong>Progreso:</strong> <span id="progreso-texto">0%</span></p>
+                <div class="progress-bar">
+                    <div id="barra-progreso" class="progress" style="width: 0%;"></div>
+                </div>
+            </div>
         <p class="box-content-subheader">Doctor: </p>
         </div>
         <div class="box-progress-wrapper">
