--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                     <a href="https://www.instagram.com/_mshkp_/" class="icon" target="_blank">
                         <i class="fa-brands fa-instagram"></i></a>
                 </div>
-                <input type="text" id="name" placeholder="Nombre">
-                <input type="email" id="email" placeholder="Correo Electrónico">
-                <input type="password" id="password" placeholder="Contraseña">
+                <input type="text" id="name" placeholder="Nombre" required>
+                <input type="email" id="email" placeholder="Correo Electrónico" required>
+                <input type="password" id="password" placeholder="Contraseña" required>
                 <button type="submit" id="registerButton">Registrar Cuenta Nueva</button>
                 <p id="successMessage" class="hidden">¡Cuenta registrada exitosamente!</p>
                 <p id="errorMessage" class="hidden"> *Todos los campos son obligatorios* </p>
@@ -37,8 +37,8 @@
                         <i class="fa-brands fa-instagram"></i>
                     </a>
                 </div>
-                <input type="email" id="loginEmail" placeholder="Correo">
-                <input type="password" id="loginPassword" placeholder="Contraseña">
+                <input type="email" id="loginEmail" placeholder="Correo" required>
+                <input type="password" id="loginPassword" placeholder="Contraseña" required>
                 <a href="3-OlvidasteContrasena.html" class="registro-link">¿Olvidaste tu Contraseña?</a>
                 <button type="submit" id="loginButton">Iniciar</button>
                 <br>
@@ -68,4 +68,3 @@
 </body>
 
 </html>
-
