--- a/dashboard_medico.html
+++ b/dashboard_medico.html
@@ -15,7 +15,7 @@
             <li><a href="#">Mis Consultas</a></li>
             <li><a href="#">Mis Pacientes</a></li>
             <li><a href="#">Perfil</a></li>
-            <li><a href="#" onclick="cerrarSesion()">Cerrar Sesión</a></li>
+            <li><a href="#" onclick="CerrarSesion()">Cerrar Sesión</a></li>
         </ul>
     </nav>
 
@@ -28,25 +28,36 @@
             <div class="option-card">
                 <h3>👨‍⚕️ Gestionar Pacientes</h3>
                 <p>Accede al historial y los datos de tus pacientes.</p>
+                <br>
                 <button onclick="verPacientes()">Ver Pacientes</button>
             </div>
+            
+
             <div class="option-card">
                 <h3>📅 Consultas Programadas</h3>
                 <p>Consulta, modifica y confirma tus citas.</p>
+                
                 <button onclick="verConsultas()">Ver Consultas</button>
             </div>
             <div class="option-card">
                 <h3>📊 Diagnósticos</h3>
                 <p>Visualiza y actualiza los diagnósticos de los pacientes.</p>
+                <br>
                 <button onclick="verDiagnosticos()">Ver Diagnósticos</button>
             </div>
             <div class="option-card">
                 <h3>⚙️ Configuración</h3>
                 <p>Gestiona tu perfil y preferencias.</p>
+                <br>
                 <button onclick="configurar()">Configurar</button>
             </div>
         </div>
     </section>
+
+        <div id="solicitudes-list">
+            <h1>Solicitudes de Consulta</h1>
+            <!-- Las solicitudes se cargarán aquí dinámicamente -->
+        </div>
 
     <footer>
         <p>© 2025 Clínica Virtual - Todos los derechos reservados.</p>
