--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
         <div class="form-container sign-up">
             <form id="registerForm" method="post">
                 <h1>Crear Cuenta</h1>
-                <div class="social-icons">
-                    <a href="https://www.instagram.com/_mshkp_/" class="icon" target="_blank">
-                        <i class="fa-brands fa-instagram"></i></a>
-                </div>
                 <input type="text" id="name" placeholder="Nombre" required>
                 <input type="email" id="email" placeholder="Correo Electrónico" required>
                 <input type="password" id="password" placeholder="Contraseña" required>
@@ -32,11 +28,7 @@
         <div class="form-container sign-in">
             <form id="loginForm">
                 <h1>Iniciar Sesión</h1>
-                <div class="social-icons">
-                    <a href="https://www.instagram.com/_mshkp_/" class="icon" target="_blank">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                </div>
+                
                 <input type="email" id="loginEmail" placeholder="Correo" required>
                 <input type="password" id="loginPassword" placeholder="Contraseña" required>
                 <a href="3-OlvidasteContrasena.html" class="registro-link">¿Olvidaste tu Contraseña?</a>
@@ -58,7 +50,7 @@
                     <h1>¿Nuevo Usuario?</h1>
                     <br>
                     <button id="register">Crear Cuenta</button>
-                    <a href="indexDoc.html" class="registro-link">¿Eres doctor? Da click Aquí para Registrarte</a>
+                    <a href="indexDoc.html" class="registro-link2">¿Eres doctor? Da click Aquí para Registrarte</a>
                 </div>
             </div>
         </div>
